# workflow-seguradora

./: .env.example  README.MD  README.md  pyproject.toml
arquivos/: .~lock.ACOMPANHAMENTO 2026.xlsx#  ACOMPANHAMENTO 2026.xlsx  FLUXO DE CAIXA.xlsx  SEGUROS PBSEG.xlsx
colaborador_virtual_rpa/: .env.example  README.md
config/: portal_wave1.json  portal_wave2.json  portal_wave3.json  settings.json
docs/: adendo_escopo_final_v1.md  especificacao_tecnica.md  mapeamento_portais_wave1.md  mapeamento_portais_wave2.md  mapeamento_portais_wave3.md  matriz_aderencia_regras_negocio.md  registro_melhorias_v2.md  windows_quickstart.md
outputs/: dashboard_execucao.html  dashboard_inteligente.html  dashboard_latest.html  email_outbox.jsonl  relatorio_execucao_20260401_114038.json  relatorio_execucao_20260401_114640.json  relatorio_execucao_20260401_122612.json  relatorio_execucao_20260401_123750.json  relatorio_execucao_20260402_195702.json  relatorio_execucao_20260417_152605.json  relatorio_execucao_20260417_152634.json  relatorio_execucao_20260417_152753.json  relatorio_execucao_20260417_153246.json  relatorio_execucao_20260417_153533.json  relatorio_execucao_20260417_154232.json  relatorio_execucao_20260423_231937.json  relatorio_execucao_20260424_124022.json  relatorio_execucao_20260427_205154.json  relatorio_execucao_20260429_211308.json  relatorio_execucao_20260429_211936.json  relatorio_execucao_20260505_225954.json  relatorio_execucao_20260505_232355.json  rpa_corretora.db  windows_runtime_report.json
scripts/: executar_rpa.bat  run_rpa_windows.bat  setup_windows.bat
(+91 files in other folders)
